<resources>

    <string name="facebook_application_id" translatable="false">208957562875395</string>

    <string name="app_name">Swear Jar</string>
    <string name="your_total_fines">Your fines so far...</string>
    <string name="sign_out">Sign out</string>

    <!-- Setup -->
    <string name="setup_information_1">40 years ago, only 1 in 4 people survived Cancer...</string>
    <string name="setup_information_2">...Today, we have a 2 in 4 chance of beating Cancer...</string>
    <string name="setup_information_3">...but, we want to quicken the pace!</string>
    <string name="setup_text_1">We want you to help raise money for Cancer Research Uk with a little donation everytime you swear!</string>
    <string name="setup_text_2">Swear Jar will monitor your texts and make a small donation to Cancer Research Uk everytime you write something naughty...</string>
    <string name="setup_voice">...Swear Jar also knows when you use some fruity language on a phone call!</string>
    <string name="setup_location_1">...Having a night on the town or just a few down at your local? Swear Jar will also monitor your location and donate a little money whenever you\'re spending money on booze</string>
    <string name="setup_location_2">All of your donations go to Cancer Research UK, together we will beat Cancer</string>
    <string name="challenged_by">Challenged by:</string>
    <string name="challenged">You challenged:</string>
    <string name="days_remaining">days\nremaining</string>
    <string name="fine">Fine:</string>
    <string name="save_challenge">Start Challenge!</string>
    <string name="donate_now">Donate\nNow</string>

    <!-- Challenges -->
    <string-array name="challenges_type_array">
        <item>No swearing!</item>
        <item>No pubbing!</item>
        <item>Go to the gym!</item>
    </string-array>

    <string-array name="challenges_key_array">
        <item>swearing</item>
        <item>pub</item>
        <item>gym</item>
    </string-array>

    <!-- Challenges length -->
    <string-array name="challenges_length_array">
        <item>7 days</item>
        <item>14 days</item>
        <item>30 days</item>
    </string-array>

    <integer-array name="challenges_length_key_array">
        <item>7</item>
        <item>14</item>
        <item>30</item>
    </integer-array>

</resources>
