<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/challenge_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="No Swearing!"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/main_text"/>

            <TextView
                android:id="@+id/challenged_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/challenger_name"
                android:text="@string/challenged_by"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/challenged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/challenger_name"
                android:text="@string/challenged"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/challenger_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                tools:text="Patrick Cavanagh"
                android:textColor="@color/main_text"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/days_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="23"
                    android:textSize="24sp"
                    android:textColor="@color/main_text"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days_remaining"
                    android:gravity="center"
                    android:textSize="12sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fine"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/challenge_fine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="£23.00"
                    android:textSize="24sp"
                    android:textColor="@color/pie_1"
                    android:textStyle="bold"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/selectable_foreground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"/>

    </FrameLayout>
</android.support.v7.widget.CardView>
